@@ -1,3 +1,8 @@
+2012-09-14  Jeff Law  <law@redhat.com>
+
+	[BZ #14583]
+	* sysdeps/pthread/pthread.h: Fix prototype of __sigsetjmp.
+
 2012-09-13  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #14576]
